--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -268,6 +268,10 @@ if (defined(ohos_lite)) {
       ]
     }
     innerapi_tags = [ "platformsdk_indirect" ]
+    install_images = [
+      system_base_dir,
+      updater_base_dir,
+    ]
     part_name = "dsoftbus"
     subsystem_name = "communication"
   }
