--- a/tests/core/authentication/BUILD.gn
+++ b/tests/core/authentication/BUILD.gn
@@ -466,6 +466,45 @@ ohos_unittest("AuthHichainTest") {
   }
 }
 
+ohos_unittest("DsoftbusAppBindTest") {
+  module_out_path = module_output_path
+  sources = [ "unittest/dsoftbus_app_bind_test.cpp" ]
+
+  include_dirs = [
+    "//base/security/device_auth/interfaces/inner_api",
+    "$dsoftbus_root_path/interfaces/kits",
+    "$dsoftbus_root_path/core/authentication/interface",
+    "$dsoftbus_root_path/core/authentication/include",
+    "//commonlibrary/c_utils/base/include",
+    "//third_party/cJSON",
+    "unittest/common/",
+    "//third_party/bounds_checking_function/include",
+  ]
+
+  deps = [
+    "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/frame:softbus_server",
+    "//third_party/bounds_checking_function:libsec_shared",
+    "//third_party/googletest:gmock",
+    "//third_party/googletest:gtest_main",
+  ]
+
+  if (!defined(global_parts_info) ||
+      defined(global_parts_info.deviceprofile_device_info_manager)) {
+    external_deps = [
+      "device_info_manager:distributed_device_profile_common",
+      "device_info_manager:distributed_device_profile_sdk",
+      "hilog:libhilog",
+      "ipc:ipc_core",
+    ]
+  } else {
+    external_deps = [
+      "hilog:libhilog",
+      "ipc:ipc_core",
+    ]
+  }
+}
+
 group("unittest") {
   testonly = true
   deps = [
@@ -475,6 +514,7 @@ group("unittest") {
     ":AuthTcpConnectionTest",
     ":AuthTest",
     ":AuthTestCallBackTest",
+    ":DsoftbusAppBindTest",
   ]
 }
 
