--- a/tests/core/adapter/fuzztest/BUILD.gn
+++ b/tests/core/adapter/fuzztest/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -13,11 +13,5 @@
 
 group("fuzztest") {
   testonly = true
-  deps = [
-    "softbusadapterhisysevent_fuzzer:fuzztest",
-    "softbusadapterrange_fuzzer:fuzztest",
-    "softbusaescrypto_fuzzer:fuzztest",
-    "softbusdecryptdata_fuzzer:SoftBusDecryptDataFuzzTest",
-    "softbussocketrecv_fuzzer:fuzztest",
-  ]
+  deps = [ "softbusrsacrypto_fuzzer:SoftBusRsaCryptoFuzzTest" ]
 }
