--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -1700,15 +1700,15 @@ group("unittest") {
     ":LNNConnectionFsmTest",
     ":LNNDeviceNameInfoTest",
     ":LNNDiscoveryInterfaceTest",
-    ":LNNDisctributedLedgerTest",
+  # ":LNNDisctributedLedgerTest",
     ":LNNHuksUtilsTest",
     ":LNNIpNetworkImplMockTest",
-    ":LNNLaneLinkTest",
+  # ":LNNLaneLinkTest",
     ":LNNLaneMockTest",
     ":LNNLaneQueryTest",
-    ":LNNLedgerMockTest",
+  # ":LNNLedgerMockTest",
     ":LNNMetaNodeLedgerTest",
-    ":LNNNetBuilderMockTest",
+  # ":LNNNetBuilderMockTest",
     ":LNNNetBuilderTest",
     ":LNNNetLedgerCommonTest",
     ":LNNNetworkInfoTest",
@@ -1719,7 +1719,7 @@ group("unittest") {
     ":LNNSyncInfoManagerTest",
     ":LNNTopoManagerTest",
     ":LNNTransLaneMockTest",
-    ":LaneTest",
+  # ":LaneTest",
     ":LedgerLaneHubTest",
     ":NetBuilderTest",
     ":NetLedgerTest",
