--- a/tests/core/bus_center/test/BUILD.gn
+++ b/tests/core/bus_center/test/BUILD.gn
@@ -458,9 +458,9 @@ group("unittest") {
   testonly = true
   deps = [
     ":BusCenterIpcTest",
-    ":ClientProxyTest",
-    ":HeartBeatCtrlTest",
-    ":HeartBeatFSMTest",
+  # ":ClientProxyTest",
+  # ":HeartBeatCtrlTest",
+  # ":HeartBeatFSMTest",
     ":HeartBeatMediumTest",
     ":HeartBeatStrategyTest",
   ]
