--- a/tests/core/common/security/permission/common/BUILD.gn
+++ b/tests/core/common/security/permission/common/BUILD.gn
@@ -81,7 +81,7 @@ ohos_unittest("PermissionEntryStaticTest") {
 group("unittest") {
   testonly = true
   deps = [
-    ":PermissionEntryStaticTest",
-    ":PermissionEntryTest",
+  # ":PermissionEntryStaticTest",
+  # ":PermissionEntryTest",
   ]
 }
