--- a/tests/sdk/transmission/trans_channel/tcp_direct/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/tcp_direct/BUILD.gn
@@ -156,6 +156,6 @@ group("unittest") {
   deps = [
     ":TransSdkTcpDirectTest",
     ":TransSessionTest",
-    ":TransTcpDirectTest",
+  # ":TransTcpDirectTest",
   ]
 }
