--- a/tests/core/transmission/trans_channel/udp_negotiation/BUILD.gn
+++ b/tests/core/transmission/trans_channel/udp_negotiation/BUILD.gn
@@ -245,7 +245,7 @@ group("unittest") {
   testonly = true
   deps = [
     ":TransUdpManagerTest",
-    ":TransUdpNegoTest",
+  # ":TransUdpNegoTest",
     ":TransUdpNegotiationExchangeTest",
     ":TransUdpNegotiationTest",
   ]
