--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -344,9 +344,9 @@ if (defined(ohos_lite)) {
       ":ClientTransChannelManagerTest",
       ":ClientTransPendingTest",
       ":ClientTransProxyFileCommonTest",
-      ":ClientTransProxyFileManagerTest",
-      ":ClientTransProxyManagerTest",
-      ":ClientTransSessionImplTest",
+    # ":ClientTransProxyFileManagerTest",
+    # ":ClientTransProxyManagerTest",
+    # ":ClientTransSessionImplTest",
       ":ClientTransUdpManagerStaticTest",
       ":ClientTransUdpManagerTest",
       ":TransSdkCommStreamTest",
