add sameaccount code
Signed-off-by: fushuchang <fushuchang2@huawei.com>

--- a/core/frame/standard/init/src/softbus_server.cfg
+++ b/core/frame/standard/init/src/softbus_server.cfg
@@ -15,7 +15,10 @@
                 "ohos.permission.PERMISSION_USED_STATS",
                 "ohos.permission.GET_SENSITIVE_PERMISSIONS",
                 "ohos.permission.RECEIVER_STARTUP_COMPLETED",
-                "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED"
+                "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED",
+                "ohos.permission.MANAGE_DISTRIBUTED_ACCOUNTS",
+                "ohos.permission.DISTRIBUTED_DATASYNC",
+                "ohos.permission.GET_DISTRIBUTED_ACCOUNTS"
             ],
             "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"],
             "critical" : [0, 10, 10]
