--- a/core/frame/standard/init/src/softbus_server_musl.cfg
+++ b/core/frame/standard/init/src/softbus_server_musl.cfg
@@ -25,7 +25,10 @@
                 "ohos.permission.INTERNET",
                 "ohos.permission.GET_NETWORK_STATS",
                 "ohos.permission.GET_NETWORK_INFO",
-                "ohos.permission.CONNECTIVITY_INTERNAL"
+                "ohos.permission.CONNECTIVITY_INTERNAL",
+                "ohos.permission.MANAGE_DISTRIBUTED_ACCOUNTS",
+                "ohos.permission.DISTRIBUTED_DATASYNC",
+                "ohos.permission.GET_DISTRIBUTED_ACCOUNTS"
             ],
             "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"],
             "critical" : [0, 10, 10]
