--- a/core/common/security/permission/permission.gni
+++ b/core/common/security/permission/permission.gni
@@ -46,5 +46,18 @@ if (defined(ohos_lite)) {
     "$dsoftbus_core_path/common/security/permission/$os_type/softbus_permission.cpp",
   ]
   softbus_permission_deps = [ "//third_party/cJSON:cjson" ]
-  softbus_permission_external_deps += [ "c_utils:utils" ]
+  softbus_permission_external_deps += [
+    "access_token:libtoken_setproc",
+    "c_utils:utils",
+  ]
+  if (!defined(global_parts_info) ||
+      defined(global_parts_info.deviceprofile_device_info_manager)) {
+    softbus_permission_external_deps += [
+      "device_info_manager:distributed_device_profile_common",
+      "device_info_manager:distributed_device_profile_sdk",
+    ]
+    softbus_permission_src += [ "$dsoftbus_core_path/common/security/permission/standard/access_control.cpp" ]
+  } else {
+    softbus_permission_src += [ "$dsoftbus_core_path/common/security/permission/standard/access_control_virtual.cpp" ]
+  }
 }
