feat:add ble adapter of discovery
Signed-off-by: kevin <liufeihu@huawei.com>

--- a/tests/core/discovery/BUILD.gn
+++ b/tests/core/discovery/BUILD.gn
@@ -30,7 +30,8 @@ group("unittest") {
     deps += [
       "ble/dispatcher:unittest",
       "ble/softbus_ble:unittest",
-      "ble/softbus_ble_mock:unittest",
+
+      # "ble/softbus_ble_mock:unittest",
       "ipc:unittest",
     ]
   }
