update adapter/common/net/bluetooth/net_bluetooth.gni. [新需求]: gatt adapter层面向接口适配，移除管理功能
Signed-off-by: yuxpro <weiyuanxin3@huawei.com>

--- a/adapter/common/net/bluetooth/net_bluetooth.gni
+++ b/adapter/common/net/bluetooth/net_bluetooth.gni
@@ -33,13 +33,12 @@ adapter_ble_src = [
 ]
 
 if (dsoftbus_feature_ex_kits) {
-  import("$dsoftbus_root_path/dsoftbus_enhance/adapter/common/net/bluetooth/broadcast/adapter/ble/adapter_ble_enhance.gni")
+  import(
+      "$dsoftbus_root_path/dsoftbus_enhance/adapter/common/net/bluetooth/broadcast/adapter/ble/adapter_ble_enhance.gni")
   adapter_ble_inc += adapter_ble_enhance_inc
   adapter_ble_src += adapter_ble_enhance_src
 } else {
-  adapter_ble_src += [
-    "$dsoftbus_root_path/adapter/common/net/bluetooth/broadcast/adapter/ble/src/softbus_ble_gatt.c",
-  ]
+  adapter_ble_src += [ "$dsoftbus_root_path/adapter/common/net/bluetooth/broadcast/adapter/ble/src/softbus_ble_gatt.c" ]
 }
 
 adapter_net_br_src = [ "$dsoftbus_root_path/adapter/common/net/bluetooth/common/softbus_adapter_bt_common.c" ]
