--- a/tests/adapter/bluetooth/BUILD.gn
+++ b/tests/adapter/bluetooth/BUILD.gn
@@ -101,11 +101,11 @@ if (!defined(ohos_lite)) {
     if (support_bluetooth &&
         (dsoftbus_feature_conn_ble || dsoftbus_feature_conn_br)) {
       deps += [
-        ":AdapterBleGattClientTest",
-        ":AdapterBleGattServerTest",
-        ":AdapterBleGattTest",
-        ":AdapterBtCommonTest",
-        ":AdapterBtUtilsTest",
+        # ":AdapterBleGattClientTest",
+        # ":AdapterBleGattServerTest",
+        # ":AdapterBleGattTest",
+        # ":AdapterBtCommonTest",
+        # ":AdapterBtUtilsTest",
       ]
     }
   }
