--- a/tests/core/discovery/BUILD.gn
+++ b/tests/core/discovery/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -30,8 +30,7 @@ group("unittest") {
     deps += [
       "ble/dispatcher:unittest",
       "ble/softbus_ble:unittest",
-
-      # "ble/softbus_ble_mock:unittest",
+      "ble/softbus_ble_mock:unittest",
       "ipc:unittest",
     ]
   }
