--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -14,118 +14,117 @@
  */
 
 [Arch]
-./BUILD.gn        zhangchunxin@huawei.com zhangshaojie3@huawei.com
-./bundle.json     zhangchunxin@huawei.com zhangshaojie3@huawei.com
-./dsoftbus.gni    zhangchunxin@huawei.com zhangshaojie3@huawei.com
-
-[Conn]
-./adapter/common/net/bluetooth/   songzhengteng@huawei.com wuchunbo1@huawei.com
-./core/adapter/br/                songzhengteng@huawei.com wuchunbo1@huawei.com
-./core/connection/                songzhengteng@huawei.com wuchunbo1@huawei.com
-./tests/adapter/bluetooth/        songzhengteng@huawei.com wuchunbo1@huawei.com
-./tests/adapter/fuzztest/softbussocketrecv_fuzzer/    songzhengteng@huawei.com wuchunbo1@huawei.com
-./tests/adapter/unittest/softbus_wifi_api_test.cpp    songzhengteng@huawei.com wuchunbo1@huawei.com
-./tests/adapter/unittest/softbus_socket_test.cpp      songzhengteng@huawei.com wuchunbo1@huawei.com
-./tests/core/connection/                              songzhengteng@huawei.com wuchunbo1@huawei.com
-
-[Disc]
-./adapter/common/range/   liufeihu@huawei.com xudaqing@huawei.com
-./core/discovery/         liufeihu@huawei.com xudaqing@huawei.com
-./sdk/discovery/          liufeihu@huawei.com xudaqing@huawei.com
-./tests/adapter/fuzztest/softbusadapterrange_fuzzer/      liufeihu@huawei.com xudaqing@huawei.com
-./tests/adapter/unittest/softbus_adapter_range_test.cpp   liufeihu@huawei.com xudaqing@huawei.com
-./tests/core/discovery/   liufeihu@huawei.com xudaqing@huawei.com
-./tests/sdk/discovery/    liufeihu@huawei.com xudaqing@huawei.com
-
-[DiscInterface]
-./interfaces/kits/discovery/  liufeihu@huawei.com xudaqing@huawei.com
-
-[Lnn]
-./adapter/common/bus_center/      zhangshaojie3@huawei.com fengyonghui@huawei.com
-./adapter/common/net/hdi/         zhangshaojie3@huawei.com fengyonghui@huawei.com
-./adapter/common/net/wifi/        zhangshaojie3@huawei.com fengyonghui@huawei.com
-./adapter/common/perf/            zhangshaojie3@huawei.com fengyonghui@huawei.com
-./core/adapter/authentication/    zhangshaojie3@huawei.com fengyonghui@huawei.com
-./core/adapter/bus_center/        zhangshaojie3@huawei.com fengyonghui@huawei.com
-./core/authentication/            zhangshaojie3@huawei.com fengyonghui@huawei.com
-./core/bus_center/                zhangshaojie3@huawei.com fengyonghui@huawei.com
-./sdk/bus_center/                 zhangshaojie3@huawei.com fengyonghui@huawei.com
-./tests/adapter/unittest/softbus_adapter_wlan_extend_test.cpp         zhangshaojie3@huawei.com fengyonghui@huawei.com
-./tests/core/adapter/unittest/bus_center_adapter_test.cpp             zhangshaojie3@huawei.com fengyonghui@huawei.com
-./tests/core/adapter/unittest/lnn_settingdata_event_monitor_test.cpp  zhangshaojie3@huawei.com fengyonghui@huawei.com
-./tests/core/authentication/      zhangshaojie3@huawei.com fengyonghui@huawei.com
-./tests/core/bus_center/          zhangshaojie3@huawei.com fengyonghui@huawei.com
-./tests/sdk/bus_center/           zhangshaojie3@huawei.com fengyonghui@huawei.com
-
-[LnnInterface]
-./interfaces/kits/bus_center/     zhangshaojie3@huawei.com fengyonghui@huawei.com
-
-[Trans]
-./core/adapter/transmission/      zhangchunxin@huawei.com zhangfengxi@huawei.com
-./core/transmission/              zhangchunxin@huawei.com zhangfengxi@huawei.com
-./sdk/transmission/               zhangchunxin@huawei.com zhangfengxi@huawei.com
-./tests/core/transmission/        zhangchunxin@huawei.com zhangfengxi@huawei.com
-./tests/sdk/transmission/         zhangchunxin@huawei.com zhangfengxi@huawei.com
-
-[TransInterface]
-./interfaces/inner_kits/transport/    zhangchunxin@huawei.com wuchengwen4@huawei.com
-./interfaces/kits/transport/          zhangchunxin@huawei.com wuchengwen4@huawei.com
-
-[Comm]
-./adapter/common/dfx/         zhangchunxin@huawei.com zhusiyuan2@huawei.com
-./adapter/common/include/     zhangchunxin@huawei.com zhusiyuan2@huawei.com
-./adapter/common/json/        zhangchunxin@huawei.com zhusiyuan2@huawei.com
-./adapter/common/kernel/      zhangchunxin@huawei.com zhusiyuan2@huawei.com
-./adapter/common/log/         zhangchunxin@huawei.com zhusiyuan2@huawei.com
-./tests/adapter/fuzztest/softbusadapterhisysevent_fuzzer/ zhangchunxin@huawei.com zhusiyuan2@huawei.com
-./tests/adapter/unittest/     zhangchunxin@huawei.com zhusiyuan2@huawei.com
-./tests/core/common/          zhangchunxin@huawei.com zhusiyuan2@huawei.com
-./tests/sdk/common/           zhangchunxin@huawei.com zhusiyuan2@huawei.com
-./tests/utils/                zhangchunxin@huawei.com zhusiyuan2@huawei.com
-
-[CommInterface]
-./interfaces/kits/common/     zhangchunxin@huawei.com zhangshaojie3@huawei.com
-
-[Framework]
-./core/frame/                 zhangshaojie3@huawei.com jiazhenyu1@huawei.com
-./sdk/frame/                  zhangshaojie3@huawei.com jiazhenyu1@huawei.com
-./sdk/BUILD.gn                zhangshaojie3@huawei.com jiazhenyu1@huawei.com
-./sdk/libsoftbus_client_map   zhangshaojie3@huawei.com jiazhenyu1@huawei.com
-./tests/core/frame/           zhangshaojie3@huawei.com jiazhenyu1@huawei.com
-./tests/sdk/frame/            zhangshaojie3@huawei.com jiazhenyu1@huawei.com
-
-[Permission]
-./core/common/security/permission/        zhangchunxin@huawei.com liubao6@huawei.com
-./tests/core/common/security/permission/  zhangchunxin@huawei.com liubao6@huawei.com
-
-[Crypto]
-./adapter/common/mbedtls/     zhangshaojie3@huawei.com liubao6@huawei.com
-./adapter/common/openssl/     zhangshaojie3@huawei.com liubao6@huawei.com
-./components/mbedtls/         zhangshaojie3@huawei.com liubao6@huawei.com
-./core/adapter/huks/          zhangshaojie3@huawei.com liubao6@huawei.com
-./tests/adapter/fuzztest/softbusdecryptdata_fuzzer/           zhangshaojie3@huawei.com liubao6@huawei.com
-./tests/adapter/unittest/dsoftbus_aes_crypto_test.cpp         zhangshaojie3@huawei.com liubao6@huawei.com
-./tests/adapter/unittest/dsoftbus_crypto_test.cpp             zhangshaojie3@huawei.com liubao6@huawei.com
-./tests/core/adapter/unittest/dsoftbus_rsa_crypto_test.cpp    zhangshaojie3@huawei.com liubao6@huawei.com
-
-[Config]
-./adapter/default_config/     zhangchunxin@huawei.com zhangshaojie3@huawei.com
-./config.py                   zhangchunxin@huawei.com zhangshaojie3@huawei.com
-./Kconfig                     zhangchunxin@huawei.com zhangshaojie3@huawei.com
-
-[2nd-Party]
-./components/nstackx/         zhangchunxin@huawei.com xuxiaoqing16@huawei.com
+adapter/default_config/     zhangchunxin@huawei.com
+BUILD.gn        zhangchunxin@huawei.com
+bundle.json     zhangchunxin@huawei.com
+config.py       zhangchunxin@huawei.com
+dsoftbus.gni    zhangchunxin@huawei.com
+Kconfig         zhangchunxin@huawei.com
 
 [Misc]
-./figures/            zhangchunxin@huawei.com zhangshaojie3@huawei.com
-./.clang-format       zhangchunxin@huawei.com zhangshaojie3@huawei.com
-./.gitignore          zhangchunxin@huawei.com zhangshaojie3@huawei.com
-./CODEOWNERS          zhangchunxin@huawei.com zhangshaojie3@huawei.com
-./hisysevent.yaml     zhangchunxin@huawei.com zhangshaojie3@huawei.com
-./OAT.xml             zhangchunxin@huawei.com zhangshaojie3@huawei.com
-./README.md           zhangchunxin@huawei.com zhangshaojie3@huawei.com
-./README_zh.md        zhangchunxin@huawei.com zhangshaojie3@huawei.com
+figures/            zhangchunxin@huawei.com
+.clang-format       zhangchunxin@huawei.com
+.gitignore          zhangchunxin@huawei.com
+CODEOWNERS          zhangchunxin@huawei.com
+hisysevent.yaml     zhangchunxin@huawei.com
+OAT.xml             zhangchunxin@huawei.com
+README.md           zhangchunxin@huawei.com
+README_zh.md        zhangchunxin@huawei.com
+
+
+[Conn]
+adapter/common/net/bluetooth/   songzhengteng@huawei.com
+core/adapter/br/                songzhengteng@huawei.com
+core/connection/                songzhengteng@huawei.com
+tests/adapter/bluetooth/        songzhengteng@huawei.com
+tests/adapter/fuzztest/softbussocketrecv_fuzzer/    songzhengteng@huawei.com
+tests/adapter/unittest/softbus_wifi_api_test.cpp    songzhengteng@huawei.com
+tests/adapter/unittest/softbus_socket_test.cpp      songzhengteng@huawei.com
+tests/core/connection/                              songzhengteng@huawei.com
+
+[Disc]
+adapter/common/range/   liufeihu@huawei.com
+core/discovery/         liufeihu@huawei.com
+sdk/discovery/          liufeihu@huawei.com
+tests/adapter/fuzztest/softbusadapterrange_fuzzer/      liufeihu@huawei.com
+tests/adapter/unittest/softbus_adapter_range_test.cpp   liufeihu@huawei.com
+tests/core/discovery/   liufeihu@huawei.com
+tests/sdk/discovery/    liufeihu@huawei.com
+
+[DiscInterface]
+interfaces/kits/discovery/  liufeihu@huawei.com
+
+[Lnn]
+adapter/common/bus_center/      zhangshaojie3@huawei.com
+adapter/common/net/hdi/         zhangshaojie3@huawei.com
+adapter/common/net/wifi/        zhangshaojie3@huawei.com
+adapter/common/perf/            zhangshaojie3@huawei.com
+core/adapter/authentication/    zhangshaojie3@huawei.com
+core/adapter/bus_center/        zhangshaojie3@huawei.com
+core/authentication/            zhangshaojie3@huawei.com
+core/bus_center/                zhangshaojie3@huawei.com
+sdk/bus_center/                 zhangshaojie3@huawei.com
+tests/adapter/unittest/softbus_adapter_wlan_extend_test.cpp         zhangshaojie3@huawei.com
+tests/core/adapter/unittest/bus_center_adapter_test.cpp             zhangshaojie3@huawei.com
+tests/core/adapter/unittest/lnn_settingdata_event_monitor_test.cpp  zhangshaojie3@huawei.com
+tests/core/authentication/      zhangshaojie3@huawei.com
+tests/core/bus_center/          zhangshaojie3@huawei.com
+tests/sdk/bus_center/           zhangshaojie3@huawei.com
+
+[LnnInterface]
+interfaces/kits/bus_center/     zhangshaojie3@huawei.com
+
+[Trans]
+core/adapter/transmission/      zhangchunxin@huawei.com
+core/transmission/              zhangchunxin@huawei.com
+sdk/transmission/               zhangchunxin@huawei.com
+tests/core/transmission/        zhangchunxin@huawei.com
+tests/sdk/transmission/         zhangchunxin@huawei.com
+
+[TransInterface]
+interfaces/inner_kits/transport/    zhangchunxin@huawei.com
+interfaces/kits/transport/          zhangchunxin@huawei.com
+
+[Comm]
+adapter/common/dfx/         zhangchunxin@huawei.com
+adapter/common/include/     zhangchunxin@huawei.com
+adapter/common/json/        zhangchunxin@huawei.com
+adapter/common/kernel/      zhangchunxin@huawei.com
+adapter/common/log/         zhangchunxin@huawei.com
+tests/adapter/fuzztest/softbusadapterhisysevent_fuzzer/ zhangchunxin@huawei.com
+tests/adapter/unittest/     zhangchunxin@huawei.com
+tests/core/common/          zhangchunxin@huawei.com
+tests/sdk/common/           zhangchunxin@huawei.com
+tests/utils/                zhangchunxin@huawei.com
+
+[CommInterface]
+interfaces/kits/common/     zhangchunxin@huawei.com
+
+[Framework]
+core/frame/                 zhangshaojie3@huawei.com
+sdk/frame/                  zhangshaojie3@huawei.com
+sdk/BUILD.gn                zhangshaojie3@huawei.com
+sdk/libsoftbus_client_map   zhangshaojie3@huawei.com
+tests/core/frame/           zhangshaojie3@huawei.com
+tests/sdk/frame/            zhangshaojie3@huawei.com
+
+[Permission]
+core/common/security/permission/        zhangchunxin@huawei.com
+tests/core/common/security/permission/  zhangchunxin@huawei.com
+
+[Crypto]
+adapter/common/mbedtls/     zhangshaojie3@huawei.com
+adapter/common/openssl/     zhangshaojie3@huawei.com
+components/mbedtls/         zhangshaojie3@huawei.com
+core/adapter/huks/          zhangshaojie3@huawei.com
+tests/adapter/fuzztest/softbusdecryptdata_fuzzer/           zhangshaojie3@huawei.com
+tests/adapter/unittest/dsoftbus_aes_crypto_test.cpp         zhangshaojie3@huawei.com
+tests/adapter/unittest/dsoftbus_crypto_test.cpp             zhangshaojie3@huawei.com
+tests/core/adapter/unittest/dsoftbus_rsa_crypto_test.cpp    zhangshaojie3@huawei.com
+
+[2nd-Party]
+components/nstackx/         zhangchunxin@huawei.com
 
 [InterfaceCode]
 # any change to core/common/include/softbus_server_ipc_interface_code.h needs to be reviewed by @leonchan5
-./core/common/include/softbus_server_ipc_interface_code.h @leonchan5 zhangchunxin@huawei.com zhangshaojie3@huawei.com
+core/common/include/softbus_server_ipc_interface_code.h @leonchan5 zhangchunxin@huawei.com zhangshaojie3@huawei.com
