--- a/tests/core/transmission/BUILD.gn
+++ b/tests/core/transmission/BUILD.gn
@@ -40,6 +40,7 @@ group("unittest") {
   ]
   if (has_enhance_test) {
     deps += [ "$dsoftbus_root_path/dsoftbus_enhance/test/core/transmission/trans_channel:unittest" ]
+    deps += [ "$dsoftbus_root_path/dsoftbus_enhance/test/core/transmission/session:unittest" ]
   }
 }
 
