build: explict mini and small system macro
Signed-off-by: aqxyjay <zhangchunxin@huawei.com>

--- a/core/common/dfx/anonymize/BUILD.gn
+++ b/core/common/dfx/anonymize/BUILD.gn
@@ -20,8 +20,10 @@ softbus_anonymizer_src = [ "src/anonymizer.c" ]
 if (defined(ohos_lite)) {
   if (ohos_kernel_type == "liteos_m") {
     build_type = "static_library"
+    libsec_deps = "//third_party/bounds_checking_function:libsec_static"
   } else {
     build_type = "shared_library"
+    libsec_deps = "//third_party/bounds_checking_function:libsec_shared"
   }
   config("dsoftbus_anonymizer_interface_lite") {
     include_dirs = [
@@ -39,7 +41,10 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/interfaces/kits/common",
     ]
     sources = softbus_anonymizer_src
-    deps = [ "$hilog_lite_deps_path" ]
+    deps = [
+      "$hilog_lite_deps_path",
+      "$libsec_deps",
+    ]
     public_configs = [ ":dsoftbus_anonymizer_interface_lite" ]
   }
 } else {
@@ -61,7 +66,6 @@ if (defined(ohos_lite)) {
       "//third_party/bounds_checking_function/include",
     ]
     sources = softbus_anonymizer_src
-    defines = [ "SOFTBUS_STANDARD_SYSTEM" ]
     defines += [ "__STDC_FORMAT_MACROS" ]
     if (is_asan) {
       defines += [ "ASAN_BUILD" ]
