--- a/tests/sdk/transmission/trans_channel/udp/stream/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/udp/stream/BUILD.gn
@@ -17,7 +17,7 @@ import("../../../../../../dsoftbus.gni")
 dsoftbus_root_path = "../../../../../.."
 
 config("stream_test") {
-  defines = [ "FILLP_LINUX" ]
+  defines += [ "FILLP_LINUX" ]
 }
 
 executable("dstream_adaptor_server_test") {
