--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -31,7 +31,7 @@ if (defined(ohos_lite)) {
       "$hilog_lite_include_path",
     ]
     if (board_name == "v200zr") {
-      defines = [ "DSOFTBUS_V200ZR" ]
+      defines += [ "DSOFTBUS_V200ZR" ]
     }
   }
 
@@ -51,7 +51,7 @@ if (defined(ohos_lite)) {
       if (board_name == "hispark_pegasus") {
         include_dirs +=
             [ "$hispark_pegasus_sdk_path/third_party/lwip_sack/include" ]
-        defines = [ "HISPARK_PEGASUS_USE_NETIF_GET_ADDR" ]
+        defines += [ "HISPARK_PEGASUS_USE_NETIF_GET_ADDR" ]
       }
       if (board_toolchain_type == "iccarm") {
         include_dirs += [
