--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -44,7 +44,7 @@ if (defined(ohos_lite)) {
   }
   if (ohos_kernel_type == "liteos_m") {
     static_library("softbus_server_frame") {
-      defines = AUTH_SERVER_DEFINES
+      defines += AUTH_SERVER_DEFINES
       defines += [ "__STDC_FORMAT_MACROS" ]
       include_dirs = dsoftbus_server_common_inc
       include_dirs += [
@@ -101,7 +101,7 @@ if (defined(ohos_lite)) {
     }
   } else {
     shared_library("softbus_server_frame") {
-      defines = AUTH_SERVER_DEFINES
+      defines += AUTH_SERVER_DEFINES
       defines += [ "__STDC_FORMAT_MACROS" ]
       include_dirs = dsoftbus_server_common_inc
       include_dirs += [
@@ -191,7 +191,7 @@ if (defined(ohos_lite)) {
     }
     branch_protector_ret = "pac_ret"
 
-    defines = AUTH_SERVER_DEFINES
+    defines += AUTH_SERVER_DEFINES
     defines += [ "__STDC_FORMAT_MACROS" ]
     include_dirs = dsoftbus_server_common_inc
     include_dirs += [
