--- a/tests/sdk/frame/fuzztest/softbusclientstub_fuzzer/BUILD.gn
+++ b/tests/sdk/frame/fuzztest/softbusclientstub_fuzzer/BUILD.gn
@@ -76,7 +76,7 @@ ohos_static_library("softbus_client_static") {
   include_dirs = common_client_inc
   deps = common_client_deps
   all_dependent_configs = [ ":dsoftbus_sdk_interface" ]
-  defines = TRANS_SDK_DEFINES
+  defines += TRANS_SDK_DEFINES
 
   if (defined(ohos_lite)) {
     cflags_cc = [ "-stdc=c++14" ]
