feature: add gatt ut, and correct data type.
Signed-off-by: yuxpro <weiyuanxin3@huawei.com>

--- a/tests/adapter/BUILD.gn
+++ b/tests/adapter/BUILD.gn
@@ -18,6 +18,7 @@ group("unittest") {
   testonly = true
   deps = [
     "bluetooth:unittest",
+    "broadcast:unittest",
     "unittest:unittest",
   ]
 }
