--- a/tests/core/authentication/BUILD.gn
+++ b/tests/core/authentication/BUILD.gn
@@ -76,6 +76,11 @@ ohos_unittest("AuthTest") {
 
 ohos_unittest("AuthEnhanceMockTest") {
   module_out_path = module_output_path
+  sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    debug = true
+  }
   sources = [
     "$dsoftbus_root_path/core/adapter/authentication/src/lnn_extdata_config_virtual.c",
     "$dsoftbus_root_path/core/authentication/src/auth_common.c",
