--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -74,6 +74,7 @@ if (dsoftbus_feature_lnn_net) {
   if (dsoftbus_feature_lnn_heartbeat) {
     bus_center_hub_inc += [
       "$dsoftbus_root_path/adapter/common/net/bluetooth/include",
+      "$dsoftbus_root_path/adapter/common/net/bluetooth/broadcast/interface",
       "$dsoftbus_core_path/core/adapter/bus_center/include",
       "$dsoftbus_core_path/core/authentication/interface",
       "$dsoftbus_core_path/connection/p2p/interface",
