--- a/core/common/dfx/hidumper_adapter/BUILD.gn
+++ b/core/common/dfx/hidumper_adapter/BUILD.gn
@@ -86,6 +86,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/bus_center/interface",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
       "$dsoftbus_root_path/core/connection/interface",
+      "$dsoftbus_root_path/core/connection/wifi_direct/utils",
       "//third_party/cJSON",
       "//third_party/bounds_checking_function/include",
     ]
