build: hilog lite deps
Signed-off-by: aqxyjay <zhangchunxin@huawei.com>

--- a/components/nstackx/nstackx_util/BUILD.gn
+++ b/components/nstackx/nstackx_util/BUILD.gn
@@ -59,6 +59,7 @@ if (defined(ohos_lite)) {
         "$NSTACKX_ROOT/nstackx_core/",
         "//third_party/bounds_checking_function/include/",
         "$hilog_lite_include_path",
+        "$utils_lite_include_path",
       ]
       sources = [
         "core/nstackx_event.c",
@@ -100,6 +101,7 @@ if (defined(ohos_lite)) {
           "$NSTACKX_ROOT/nstackx_core/",
           "//third_party/bounds_checking_function/include/",
           "$hilog_lite_include_path",
+          "$utils_lite_include_path",
         ]
         sources = [
           "core/nstackx_dev.c",
@@ -138,6 +140,7 @@ if (defined(ohos_lite)) {
           "$NSTACKX_ROOT/nstackx_core/",
           "//third_party/bounds_checking_function/include/",
           "$hilog_lite_include_path",
+          "$utils_lite_include_path",
         ]
         sources = [
           "core/nstackx_dev.c",
