--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -160,6 +160,7 @@ if (defined(ohos_lite)) {
     include_dirs += conn_common_inc + trans_common_inc
     dfx_source = [
       "dfx/hidumper_adapter/softbus_hidumper.c",
+      "dfx/hidumper_adapter/softbus_hidumper_bc_mgr.c",
       "dfx/hidumper_adapter/softbus_hidumper_disc.c",
       "dfx/hidumper_adapter/softbus_hidumper_conn.c",
       "dfx/hidumper_adapter/softbus_hidumper_nstack.c",
