--- a/core/common/dfx/hidumper_adapter/BUILD.gn
+++ b/core/common/dfx/hidumper_adapter/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -43,6 +43,7 @@ if (defined(ohos_lite)) {
     sources = [
       "softbus_hidumper.c",
       "softbus_hidumper_alarm_virtual.c",
+      "softbus_hidumper_bc_mgr_virtual.c",
       "softbus_hidumper_buscenter_virtual.c",
       "softbus_hidumper_conn_virtual.c",
       "softbus_hidumper_disc_virtual.c",
@@ -96,6 +97,7 @@ if (defined(ohos_lite)) {
 
       # "$softbus_adapter_common/kernel/liteos_m/softbus_adapter_timer.c",
       "softbus_hidumper_alarm.c",
+      "softbus_hidumper_bc_mgr.c",
       "softbus_hidumper_buscenter.c",
       "softbus_hidumper_conn.c",
       "softbus_hidumper_disc.c",
