--- a/tests/sdk/transmission/session/BUILD.gn
+++ b/tests/sdk/transmission/session/BUILD.gn
@@ -202,6 +202,28 @@ ohos_unittest("TransClientSessionTest") {
   }
 }
 
+ohos_unittest("TransClientSocketServiceTest") {
+  module_out_path = module_output_path
+  sources = [ "client_trans_socket_service_test.cpp" ]
+
+  deps = [
+    "$dsoftbus_root_path/sdk:softbus_client",
+    "//third_party/googletest:gtest_main",
+  ]
+
+  if (is_standard_system) {
+    external_deps = [
+      "c_utils:utils",
+      "hilog:libhilog",
+    ]
+  } else {
+    external_deps = [
+      "c_utils:utils",
+      "hilog:libhilog",
+    ]
+  }
+}
+
 group("unittest") {
   testonly = true
   deps = [
@@ -210,5 +232,6 @@ group("unittest") {
     ":TransClientSessionManagerTest",
     ":TransClientSessionServiceTest",
     ":TransClientSessionTest",
+    ":TransClientSocketServiceTest",
   ]
 }
